# Privateer

./: .gitignore  .readthedocs.yaml  BUILD_LOG_LATEST.txt  CMakeLists.txt  PrivateerConfig.cmake.in  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md
.github/workflows/: cmake-single-platform.yml
cmake/: Findzstd.cmake
docs/: Doxyfile
docs/Privateer/: mkdocs.yml
docs/Privateer/docs/: index.md
docs/Privateer/docs/about/: license_notice.md  publication.md
docs/Privateer/docs/advanced_build/: cmake.md  test.md
docs/Privateer/docs/basics/: getting_started.md
docs/Privateer/docs/detail/: api.md
docs/html/: annotated.html  block__storage_8hpp_source.html  classPrivateer-members.html  classPrivateer.html  classblock__storage-members.html  classblock__storage.html  classes.html  classvirtual__memory__manager-members.html  classvirtual__memory__manager.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e868763c9e11ac2473e292690724d3ed.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  privateer_8hpp_source.html  virtual__memory__manager_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
docs/latex/: annotated.tex  classPrivateer.tex  classblock__storage.tex  classvirtual__memory__manager.tex  refman.tex
examples/: CMakeLists.txt
examples/incremental_update_snapshot/: CMakeLists.txt  incremental_update_snapshot.cpp  incremental_update_snapshot_skewed.cpp
examples/simple_write/: CMakeLists.txt  simple_write.cpp
include/privateer/: block_storage.hpp  block_storage_base.hpp  block_storage_factory.hpp  posix_block_storage.hpp  privateer.hpp  sigaction_virtual_memory_manager.hpp  smartcache_block_storage.hpp  uffd_virtual_memory_manager.hpp  virtual_memory_manager.hpp  virtual_memory_manager_base.hpp  virtual_memory_manager_factory.hpp
include/privateer/utility/: UFFD.hpp  compression.hpp  event_queue.hpp  sigsegv_handler_dispatcher.hpp  spdlog_json.hpp  system.hpp
src/privateer/: block_storage_base.cpp  block_storage_factory.cpp  posix_block_storage.cpp  sigaction_virtual_memory_manager.cpp  smartcache_block_storage.cpp  uffd_virtual_memory_manager.cpp  virtual_memory_manager_base.cpp  virtual_memory_manager_factory.cpp
test/: CMakeLists.txt  PrivateerTest.cpp
test_apps/: CMakeLists.txt
test_apps/incremental_update_snapshot/: CMakeLists.txt  incremental_update_snapshot.cpp  incremental_update_snapshot_open.cpp  incremental_update_snapshot_skewed.cpp
